--- a/BusHelper/wwwroot/map.html
+++ b/BusHelper/wwwroot/map.html
@@ -37,12 +37,14 @@
                 <p class="alert bottom">根据系统监测，339号线路-鄂A·73788-王蕊行驶公交车途中多次发生拨打电话行为，请管理员进行核实，及时介入。</p>
             </div>
             <div class="alert-modal-footer">
-                <h3 id="linkBtn" class="text-white">立即联系</h3>
+                <a href="info_error.html" target="_blank">
+                    <h3 id="linkBtn" class="text-white">立即联系</h3>
+                </a>
             </div>
         </div>
     </div>
 
-    <div id="link" class="alert-modal">
+    <!-- <div id="link" class="alert-modal">
         <div class="alert-modal-content">
             <div class="alert-modal-header">
                 <span class="closeBtn">&times;</span>
@@ -56,7 +58,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="fixed-top pointer_none w100-h100">
         <nav class="navbar shadow-sm navbar-expand-lg bg-dark py-3 py-lg-0 px-lg-5 pointer_all">
