change the map and brief introduction

--- a/BusHelper/wwwroot/brief.html
+++ b/BusHelper/wwwroot/brief.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <b>Hello world!</b>
-    <br> I am a popupupupup.....
+    <b>1-鄂A·JD343-王蕊-339路</b>
+    <br><br>
+    <img src="./fake_data/driver_fake.JPG" width="160px" height="100px">
     <br><br><a href="info.html" class="float-right" target="_blank">>>>详细内容</a><br>
 </body>
