--- a/BusHelper/wwwroot/map.html
+++ b/BusHelper/wwwroot/map.html
@@ -26,7 +26,7 @@
     <link rel="shortcut icon" href="img/htmllogo.ico">
 </head>
 
-<body>
+<!-- <body>
     <div id="simpleModal" class="alert-modal">
         <div class="alert-modal-content">
             <div class="alert-modal-header">
@@ -43,9 +43,9 @@
                 </a>
             </div>
         </div>
-    </div>
+    </div> -->
 
-    <!-- <div id="link" class="alert-modal">
+<!-- <div id="link" class="alert-modal">
         <div class="alert-modal-content">
             <div class="alert-modal-header">
                 <span class="closeBtn">&times;</span>
@@ -61,61 +61,61 @@
         </div>
     </div> -->
 
-    <div class="fixed-top pointer_none w100-h100">
-        <nav class="navbar shadow-sm navbar-expand-lg bg-dark py-3 py-lg-0 px-lg-5 pointer_all">
-            <div class="navbar-collapse justify-content-between" id="toolbar">
-                <a href="index.html" class="navbar-brand mx-5 d-lg-block">
-                    <img src="img/logo.svg" width="250px">
-                    <!-- <h5 class="text-white my-n2">云端可视化交互平台</h5> -->
+<div class="fixed-top pointer_none w100-h100">
+    <nav class="navbar shadow-sm navbar-expand-lg bg-dark py-3 py-lg-0 px-lg-5 pointer_all">
+        <div class="navbar-collapse justify-content-between" id="toolbar">
+            <a href="index.html" class="navbar-brand mx-5 d-lg-block">
+                <img src="img/logo.svg" width="250px">
+                <!-- <h5 class="text-white my-n2">云端可视化交互平台</h5> -->
+            </a>
+            <div class="navbar-nav ml-auto py-0">
+                <a href="#about" class="fontsize"><img src="img/概况.svg" class="gap" width="30px" />实况</a>
+                <a href="info.html" target="_blank" class="fontsize"><img src="img/司机.svg" class="gap" width="30px" />司机</a>
+                <a href="mailbox.html" class="fontsize"><img src="img/信箱.svg" class="gap" width="30px" />信箱
+                    <div class="redpoint" id="red4" style="--num:2">{{unread}}</div>
                 </a>
-                <div class="navbar-nav ml-auto py-0">
-                    <a href="#about" class="fontsize"><img src="img/概况.svg" class="gap" width="30px" />实况</a>
-                    <a href="info.html" target="_blank" class="fontsize"><img src="img/司机.svg" class="gap" width="30px" />司机</a>
-                    <a href="mailbox.html" class="fontsize"><img src="img/信箱.svg" class="gap" width="30px" />信箱
-                        <div class="redpoint" id="red4" style="--num:2">{{unread}}</div>
-                    </a>
-                </div>
-                <div id="box">
-                    <input type="search" name="search" placeholder="请输入查找司机关键词">
-                    <div id="search">搜索</div>
-                </div>
             </div>
-        </nav>
-        <div class="sidebar pointer_all" style="height: 100vh;">
-            <ul id="bus-list">
-                <li id="1-100">
-                    <h5>1-100</h5>
-                </li>
-                <ul id="1-100-list">
-
-                </ul>
-                <li id="101-200">
-                    <h5>101-200</h5>
-                </li>
-                <ul id="101-200-list">
-
-                </ul>
-                <li>
-                    <h5>201-300</h5>
-                </li>
-                <li>
-                    <h5>301-400</h5>
-                </li>
-                <li>
-                    <h5>401-500</h5>
-                </li>
-                <li>
-                    <h5>501-600</h5>
-                </li>
-            </ul>
+            <div id="box">
+                <input type="search" name="search" placeholder="请输入查找司机关键词">
+                <div id="search">搜索</div>
+            </div>
         </div>
-        <div class="btn pointer_all" id="scoll"><img id="slide-img" src="img/slide.svg" width="20px">&nbsp;单车概况</div>
+    </nav>
+    <div class="sidebar pointer_all" style="height: 100vh;">
+        <ul id="bus-list">
+            <li id="1-100">
+                <h5>1-100</h5>
+            </li>
+            <ul id="1-100-list">
+
+            </ul>
+            <li id="101-200">
+                <h5>101-200</h5>
+            </li>
+            <ul id="101-200-list">
+
+            </ul>
+            <li>
+                <h5>201-300</h5>
+            </li>
+            <li>
+                <h5>301-400</h5>
+            </li>
+            <li>
+                <h5>401-500</h5>
+            </li>
+            <li>
+                <h5>501-600</h5>
+            </li>
+        </ul>
     </div>
-    <div id="map"></div>
-    <script src="./JS/map.js"></script>
-    <script src="./JS/alert.js"></script>
-    <script src="JS/vue.js"></script>
-    <script src="JS/redpoint.js"></script>
+    <div class="btn pointer_all" id="scoll"><img id="slide-img" src="img/slide.svg" width="20px">&nbsp;单车概况</div>
+</div>
+<div id="map"></div>
+<script src="./JS/map.js"></script>
+<script src="./JS/alert.js"></script>
+<script src="JS/vue.js"></script>
+<script src="JS/redpoint.js"></script>
 </body>
 
 
