--- a/BusHelper/wwwroot/map.html
+++ b/BusHelper/wwwroot/map.html
@@ -109,7 +109,9 @@
             </li>
         </ul>
     </div>
-    <div class="btn pointer_all" id="scoll"><img id="slide-img" src="img/slide.svg" width="20px">&nbsp;单车概况</div>
+    <div class="btn pointer_all" id="scoll"><img id="slide-img" src="img/slide.svg" width="20px">&nbsp;单车概况
+        <div class="btn-red pointer_all" id="scoll"><img id="slide-img-red" src="img/slide.svg" width="20px">&nbsp;预警信息</div>
+    </div>
 </div>
 <div id="map"></div>
 <script src="./JS/map.js"></script>
