实体类没写完

--- a/BusHelper/wwwroot/info.html
+++ b/BusHelper/wwwroot/info.html
@@ -30,9 +30,10 @@
                     </a>
                 </div>
                 <div id="box">
-                    <input type="search" name="search" placeholder="请输入查找司机关键词">
+                    <input type="search" name="search" placeholder="请输入查找司机关键词" id="to_search">
                     <div id="search">搜索</div>
                 </div>
+
             </div>
         </nav>
         <div class="sidebar pointer_all" style="height: 100vh;">
