实体类修改

--- a/BusHelper/wwwroot/info.html
+++ b/BusHelper/wwwroot/info.html
@@ -193,7 +193,7 @@
     <div class="bg-dark text-white py-2" id="contact" style="margin-top: 0px;">
         <div class="container text-center py-5">
             <div class="section-title position-relative text-center">
-                <h1 class="font-secondary display-3 text-white">公交管家</h1>
+                <h1 class="font-secondary display-3 text-white">公交安行</h1>
                 <!-- <i class="far fa-heart text-white"></i> -->
             </div>
             <!-- <div class="d-flex justify-content-center mb-4">
@@ -203,14 +203,14 @@
                 <a class="btn btn-lg btn-outline-light btn-lg-square" href="#"><i class="fab fa-instagram"></i></a>
             </div> -->
             <div class="position-relative text-center">
-                Bus management system<br/> an integrated monitering system involving cloud interaction and wearable devices
+                Bus-Safengine<br/> an integrated monitering system involving cloud interaction and wearable devices
             </div>
             <div class="d-flex justify-content-center py-2">
                 <p class="text-white" href="#"><a href="email-protection.html" class="__cf_email__" data-cfemail="9ef7f0f8f1defbe6fff3eef2fbb0fdf1f3">[联系方式]</a></p>
                 <span class="px-3">|</span>
                 <p class="text-white" href="#"><a href="email-protection.html" class="__cf_email__" data-cfemail="9ef7f0f8f1defbe6fff3eef2fbb0fdf1f3">[关于我们]</a></p>
             </div>
-            <p class="m-0">Copyright &copy; 2022.Bus Manager System.
+            <p class="m-0">Copyright &copy; 2022.Bus-Safengine.
             </p>
         </div>
     </div>
