add to pop windows in map.html

--- a/BusHelper/wwwroot/mailbox.html
+++ b/BusHelper/wwwroot/mailbox.html
@@ -83,11 +83,8 @@
                     </div>  
                 </div>
             </template>
-        <!-- 司机状态卡片 -->
+        <!-- 司机状态卡片，在下面的div显示，不要删！ -->
         <div class="row" id="card-group">
-
-
-
         </div>
         <script src="JS/jquery-3.4.1.min.js"></script>
         <script src="JS/mailbox.js"></script>
