--- a/BusHelper/wwwroot/info.html
+++ b/BusHelper/wwwroot/info.html
@@ -143,7 +143,7 @@
                                 <p class="bottom">无</p>
                             </div>
                             <h5 class="text-dark-teal">实时图像</h5>
-                            <div class="text-dark-teal">
+                            <div id="record" class="text-dark-teal">
                                 <div class="wrapper-danger bottom">
                                     <p class="bottom">抽烟：</p>
                                     <p class="bottom text-teal"></p>
@@ -216,11 +216,8 @@
     </div>
     <script src="JS/jquery-3.4.1.min.js"></script>
     <script src="JS/info.js"></script>
-<<<<<<< HEAD
     <script src="JS/mailbox.js"></script>
-=======
     <script src="JS/redpoint.js"></script>
->>>>>>> main
 </body>
 
 </html>
