客户端服务器端全部连接，考虑如何携带busId

--- a/BusHelper/wwwroot/brief.html
+++ b/BusHelper/wwwroot/brief.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>公交管家-总体实况</title>
+    <title>公交安行-总体实况</title>
     <meta charset="utf-8">
     <script src="./JS/jquery-3.4.1.min.js"></script>
     <link href="css/style.css" rel="stylesheet">
