--- a/BusHelper/wwwroot/index.html
+++ b/BusHelper/wwwroot/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>公交管家-登陆界面</title>
+    <title>公交安行-登陆界面</title>
     <script src="./JS/jquery-3.4.1.min.js"></script>
     <link href="./css/index.css" type="text/css" rel="stylesheet" />
     <link rel="shortcut icon" href="img/htmllogo.ico">
