--- a/BusHelper/wwwroot/mailbox.html
+++ b/BusHelper/wwwroot/mailbox.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>公交管家-司机信箱</title>
+    <title>公交安行-司机信箱</title>
     <link href="css/style.css" rel="stylesheet">
     <link href="css/mailbox.css" rel="stylesheet">
-    <link href="css/bar.css" rel="stylesheet">    
+    <link href="css/bar.css" rel="stylesheet">
     <script src="JS/vue.js"></script>
     <style>
         .container {
@@ -89,5 +89,6 @@
         <script src="JS/jquery-3.4.1.min.js"></script>
         <script src="JS/mailbox.js"></script>
         <script src="JS/redpoint.js"></script>
-    </body>
+</body>
+
 </html>
