--- a/BusHelper/wwwroot/map.html
+++ b/BusHelper/wwwroot/map.html
@@ -8,7 +8,7 @@
     5开放网址-->
 
 <head>
-    <title>公交管家-总体实况</title>
+    <title>公交安行-总体实况</title>
     <meta charset="utf-8">
     <!-- leaflet need -->
     <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/leaflet/1.8.0/leaflet.css">
